# apple-ii-port-work

./: CMakeCache.txt  LICENSE  README.md  TODO.txt  apple-char-io.c  apple-dump.txt  link.ld  main.c  prodos-exit.S  prodos-syscall-core.h  prodos-syscall.c  prodos-syscall.h  testtext.txt
src/: CMakeLists.txt  main.c
src/apple-ii/: CMakeLists.txt  apple-char-io.c
src/apple-ii-prodos/: CMakeLists.txt  prodos-syscall-core.h
src/example/: CMakeLists.txt
src/example/breakout/: CMakeLists.txt  main.c  sound.c  sound.h
src/example/breakout-appleiie-bare/: CMakeLists.txt  main.c  paddle.c  paddle.h  rand.c  sound.c  text-lores-io.c  text-lores-io.h
src/example/hello/: CMakeLists.txt  main.c
src/example/paddle-read/: CMakeLists.txt  main.c
src/example/paddle-read-advanced/: CMakeLists.txt  main.c
src/example/prodos-showcase/: CMakeLists.txt  io-buffer-alloc.c  io-buffer-alloc.h  prodos-combo-buffer.c  prodos-showcase.c
src/example/serpinski-bare/: CMakeLists.txt  hires.c  main.c
src/lib/: CMakeLists.txt
src/lib/apple-ii/: CMakeLists.txt  apple-char-io.c  apple-ii-io.h  apple-ii-mmio.h  apple-ii-monitor.c  apple-ii-monitor.h  apple-iie-monitor.h
src/lib/apple-ii-autostart-rom/: CMakeLists.txt  apple-ii-monitor.c  apple-ii-monitor.h
src/lib/apple-ii-bare/: CMakeLists.txt  link.ld
src/lib/apple-ii-prodos/: CMakeLists.txt  link.ld  prodos-combo-buffer.c  prodos-combo-buffer.h  prodos-exit.c  prodos-syscall-core.h  prodos-syscall.c  prodos-syscall.h
src/lib/apple-ii-prodos-hires/: apple-ii-hires-copy-stub.S  link.ld
src/lib/apple-ii-prodos-stdlib/: CMakeLists.txt  README.txt  char-io.c
src/lib/apple-iie/: CMakeLists.txt  apple-iie-io.h
src/lib/apple-iie-autostart-rom/: CMakeLists.txt  apple-iie-monitor.h
src/lib/apple-iie-bare/: CMakeLists.txt
src/lib/apple-iie-prodos/: CMakeLists.txt  prodos-syscall-core.S  prodos-syscall-core.h
src/lib/apple-iie-prodos-cli/: CMakeLists.txt  link.ld
src/lib/apple-iie-prodos-hires/: CMakeLists.txt  apple-ii-hires-copy-stub.S
src/lib/apple-iie-prodos-stdlib/: CMakeLists.txt  prodos-exit.c
